# opp_env

./: .gitignore  CHANGES.md  CNAME  DEVELOP.md  INSTALL.md  README.md  default.nix  external_versions.json  flake.nix  index.html  inet_versions.py  omnetpp_versions.py  opp_env  pyproject.toml  script.js  setenv  setup.py  start_local_server  styles.css  test.py  test_opp_env  test_opp_env_download_omnetpp  test_opp_env_project
.github/workflows/: external-smoketest.yml  flora-1.2.0-compatibility.yml  inet-smoketest.yml  omnetpp-smoketest.yml  plexe-3.2-compatibility.yml  publish-to-pypi.yml  simu5g-1.1.0-compatibility.yml  simu5g-1.2.1-compatibility.yml  simu5g-1.2.2-compatibility.yml  simu5g-1.2.3-compatibility.yml  simu5g-1.3.0-compatibility.yml  simu5g-1.3.1-compatibility.yml  simu5g-git-compatibility.yml  simu5g-smoketest.yml  simulte-smoketest.yml  smoketest.yml  veins-5.0-compatibility.yml  veins-5.1-compatibility.yml  veins-5.2-compatibility.yml  veins-5.3-compatibility.yml  veins-5.3.1-compatibility.yml  veins-simu5g-cross-compatibility.yml  veins-smoketest.yml  veins-vlc compatibility.yml
docker/: .dockerignore  Dockerfile  bashrc  build  build-wsl-image  entrypoint.sh  keyfile.glib-2.0  nix.conf  oobe.sh  opp_env.cmd  opp_env_distro.cmd  opp_env_distro_install.cmd  opp_env_distro_uninstall.cmd  profile  run  terminal-profile.json  wsl-distribution.conf  wsl.conf
misc/: create_changelog.py  make_patch_release  make_patch_release_windows
nix/: 0001-Fix-permissions-after-copying-templates.patch  0002-Remove-upgrade-subcommand.patch  0003-Remove-pip-from-dependencies.patch
opp_env/: __main__.py  external_versions.json  external_versions.py  inet_versions.py  omnetpp_versions.py  opp_env.py  simu5g_versions.py  simulte_versions.py  veins_versions.py
opp_env/database/: external.py  inet.py  omnetpp.py  simu5g.py  simulte.py  testproject.py  veins.py  wip.py
opp_env/templates/metadata/: startup.bsh
tests/: download_all.sh  project_tester  smoketest_install_and_run  smoketest_list_and_info  smoketest_nixless  test_external_build  test_inet_build  test_omnetpp_build  test_opp_env_download_omnetpp  test_opp_env_inet  test_opp_env_project  test_oppenv  testlib.inc
