[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]

build-backend = "setuptools.build_meta"

[project]
name = "opp_env"
authors = [
    {name = "András Varga", email = "andras@omnetpp.org"},
    {name = "Levente Mészáros", email = "levy@omnetpp.org"},
    {name = "Rudolf Hornig", email = "rudi@omnetpp.org"},
]
maintainers = [
    {name = "Rudolf Hornig", email = "rudi@omnetpp.org"},
]
description = "A tool, that sets up the development environment for OMNeT++ projects"
keywords = ["omnetpp", "omnest", "simulation", "discrete", "event", "package manager", "model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Programming Language :: C++",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Education",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Software Distribution",
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://omnetpp.org"
Documentation = "https://github.com/omnetpp/opp_env/blob/main/README.md"
Changes = "https://github.com/omnetpp/opp_env/blob/main/CHANGES.md"
Repository = "https://github.com/omnetpp/opp_env"
Issues = "https://github.com/omnetpp/opp_env/issues"
Changelog = "https://github.com/omnetpp/opp_env/commits/main"

[project.optional-dependencies]

[project.scripts]
opp_env = "opp_env.opp_env:main"

[tool.setuptools]
packages = ["opp_env"]

[tool.setuptools_scm]
write_to = "opp_env/_version.py"

